# TelloROS2

./: README.md
install/: local_setup.sh  setup.sh
install/tello/lib/tello/: tello
install/tello/share/tello/: package.dsv  package.ps1  package.sh
install/tello_control/lib/tello_control/: tello_control
install/tello_control/share/tello_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/tello_control/share/tello_control/cmake/: tello_controlConfig-version.cmake  tello_controlConfig.cmake
install/tello_control/share/tello_control/environment/: ament_prefix_path.dsv  path.dsv
install/tello_msg/share/tello_msg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/tello_msg/share/tello_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  tello_msgConfig-version.cmake  tello_msgConfig.cmake
scripts/: build.sh
workspace/src/dev_drone/: package.xml  setup.cfg  setup.py
workspace/src/dev_drone/dev_drone/: control.py  qr_code.py  tello_behavior.py
workspace/src/dev_drone/launch/: launch.py
workspace/src/interfaces/: CMakeLists.txt  package.xml
workspace/src/interfaces/srv/: ChangeDroneMode.srv
(+71 files in other folders)
