<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dev_drone</name>
  <version>0.0.0</version>
  <description>Controle d'un drone quadrirotor</description>
  <maintainer email="arnaud.ville@cpe.fr">arnaud.ville</maintainer>
  <license>Apache License 2.0</license>

  <depend>tello_msg</depend>

  <depend>rclpy</depend>

  <depend>sensor_msgs</depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
